--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/RalfHsiao/webpack5-demo#readme",
   "dependencies": {
-    "webpack": "^5.9.0"
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0"
   }
 }
